[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/room_instance.gd" type="Script" id=1]
[ext_resource path="res://scenes/char_obj_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/twilight.png" type="Texture" id=3]
[ext_resource path="res://scenes/room_trans_button.tscn" type="PackedScene" id=4]

[node name="room_template" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="state_handler" type="Node" parent="."]

[node name="char_obj_button" parent="state_handler" instance=ExtResource( 2 )]
margin_left = 49.0048
margin_top = 40.9472
margin_right = 495.005
margin_bottom = 600.947
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 3 )
dialog_label = "cool_text"

[node name="room_trans_button" parent="state_handler" instance=ExtResource( 4 )]
margin_left = 1052.78
margin_top = 181.243
margin_right = 1564.78
margin_bottom = 687.243
room_label = "room2"

[connection signal="start_dialog" from="state_handler/char_obj_button" to="." method="_on_char_obj_button_start_dialog"]
[connection signal="change_room" from="state_handler/room_trans_button" to="." method="_on_room_trans_button_change_room"]
[connection signal="pressed" from="state_handler/room_trans_button" to="state_handler/room_trans_button" method="_on_room_trans_button_pressed"]
